// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewDocButton should render a view button poiting to the doc url with the searchTerm if pressent 1`] = `
<Connect(I18NLink)
  className="btn btn-default btn-xs view-doc"
  onClick={[Function]}
  to="/entity/123"
>
  <Connect(Icon)
    icon="angle-right"
  />
   
  <Connect(Translate)>
    View
  </Connect(Translate)>
</Connect(I18NLink)>
`;

exports[`ViewDocButton should render a view button poiting to the doc url with the searchTerm if pressent 2`] = `
<Connect(I18NLink)
  className="btn btn-default btn-xs view-doc"
  onClick={[Function]}
  to="/entity/123?searchTerm=something"
>
  <Connect(Icon)
    icon="angle-right"
  />
   
  <Connect(Translate)>
    View
  </Connect(Translate)>
</Connect(I18NLink)>
`;

exports[`ViewDocButton when targetReference is provided should render view button with reference id in the url query 1`] = `
<Connect(I18NLink)
  className="btn btn-default btn-xs view-doc"
  onClick={[Function]}
  to="/entity/123?ref=ref1"
>
  <Connect(Icon)
    icon="angle-right"
  />
   
  <Connect(Translate)>
    View
  </Connect(Translate)>
</Connect(I18NLink)>
`;

exports[`ViewDocButton when targetReference is provided should render view button with reference id in the url query 2`] = `
<Connect(I18NLink)
  className="btn btn-default btn-xs view-doc"
  onClick={[Function]}
  to="/entity/123?searchTerm=something&ref=ref1"
>
  <Connect(Icon)
    icon="angle-right"
  />
   
  <Connect(Translate)>
    View
  </Connect(Translate)>
</Connect(I18NLink)>
`;
